feat: Implemented EssentialsX Discord features for chats fix: Various code optimisations and error fixes in autobuild.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/upload-artifact@v3
         if: success()
         with:
-          name: ChatPings
+          name: ChatsPlus
           path: build/libs/ChatsPlus-*.jar
           if-no-files-found: error
 
