--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Build
-        run: ./gradlew build
+        run: ./gradlew shadowJar
 
       - name: Archive Artifact
         uses: actions/upload-artifact@v3
